# rust-exercises

./: .gitignore  LICENSE  flake.nix  maskfile.md
awskctx/: Cargo.toml  README.md
awskctx/src/: main.rs
howcool/: Cargo.toml  README.md
howcool/src/: lib.rs  main.rs
kubetpl/: Cargo.toml  README.md
kubetpl/src/: main.rs
kubetpl/src/kubectl/: nodes.rs
urlstat/: Cargo.toml
urlstat/src/: main.rs
